--- a/template/package.json
+++ b/template/package.json
@@ -24,7 +24,8 @@
     "style-loader": "^0.18.2",
     "webpack": "^3.0.0",
     "webpack-dev-server": "^2.5.0",
-    "webpack-merge": "^4.1.0"
+    "webpack-merge": "^4.1.0",
+    "lodash": "^4.17.4"
   },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --env development",
