--- a/template/package.json
+++ b/template/package.json
@@ -31,7 +31,17 @@
     "webpack-merge": "^4.1.0",
     "css-loader": "^0.28.4",
     "style-loader": "^0.18.2",
-    "postcss-loader": "^2.0.6"
+    "postcss-loader": "^2.0.6",
+    "babel-core": "^6.25.0",
+    "babel-loader": "^7.1.1",
+    "babel-polyfill": "^6.23.0",
+    {{#if_eq compatibility "IE6"}}
+    "babel-preset-env": "^1.5.2",
+    "es3ify-loader": "^0.2.0",
+    {{/if_eq}}
+    {{#if_eq compatibility "modern"}}
+    "babel-preset-es2015": "^6.24.1",
+    {{/if_eq}}
   },
   "scripts": {
     {{#if_eq projectScale "simple"}}
